# Otus_6

./: CMakeLists.txt
.github/workflows/: cmake.yml
include/: CommandBlock.h  CommandReader.h
src/: main.cpp
tests/: BulkTest.cpp
